--- a/src-svelte/package.json
+++ b/src-svelte/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
-    "build": "vite build --base=/site",
+    "build": "vite build --base=/responsive-landing-page-Fylo/site",
 		"preview": "vite preview",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write ."
